--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -9,13 +9,14 @@
 	margin-left: 148px;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1024px) {
     .intro {
 	margin-left: 48px;
+	margin-right: 48px;
     }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
     .intro {
 	margin-left: 24px;
 	margin-right: 24px;
@@ -23,7 +24,7 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
     .intro {
 	margin-left: 16px;
 	margin-right: 16px;
