--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,13 +8,19 @@
     width: 640px;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1024px) {
     .lead__subtitle {
     margin-bottom: 56px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 728px) {
+    .lead__subtitle {
+    width: 580px;
+    }
+}
+
+@media screen and (max-width: 600px) {
     .lead__subtitle {
     font-size: 16px;
     line-height: 20px;
