--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,26 +5,28 @@
 
 .lead{
 	position: relative;
-	margin: 56px 148px 92px 148px;
-}
-
-@media screen and (max-width: 1280px) {
-    .lead {
-    	margin-top: 48px;
-    	margin-left: 48px;
-    	margin-right: 48px;
-    }
+	margin: 56px auto 92px auto;
+    max-width: 984px;
+    padding-left: 48px;
+    padding-right: 48px;
+    margin-top: 56px;
 }
 
 @media screen and (max-width: 1024px) {
-	.lead {
-    	margin-left: 0;
-    	margin-right: 0;
-    	margin-bottom: 88px;
+    .lead {
+        margin-bottom: 88px;
+        margin-top: 48px;
     }
 }
 
 @media screen and (max-width: 768px) {
+	.lead {
+    	padding-left: 0;
+    	padding-right: 0;
+    }
+}
+
+@media screen and (max-width: 600px) {
     .lead {
     margin-bottom: 64px;
     }
