--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -2,6 +2,23 @@
     max-width: 100%;
     max-height: 100%;
     width: 100%;
-    height: 100%;
+    height: 213px;
     object-fit: cover;
+}
+
+@media screen and (max-width: 1024px) {
+    .photo-grid {
+	height: 225px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .photo-grid {
+	height: 264px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .photo-grid {
+	height: 216px;
 }
