--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,7 @@
 @import url(./__item/photo-grid__item.css);
 
 .photo-grid {
-	min-height: 671px;
+    height: auto;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
@@ -9,18 +9,16 @@
     margin: 92px 48px 92px 48px;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1024px) {
     .photo-grid {
-	min-height: 942px;
 	grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
     grid-gap: 14px;
     }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
     .photo-grid {
-	min-height: 1664px;
 	grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
     grid-gap: 16px;
@@ -28,9 +26,8 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 450px) {
     .photo-grid {
-	min-height: 2724px;
 	grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(12, 1fr);
     grid-gap: 12px;
