--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -5,23 +5,24 @@
     grid-row: 2/2;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1024px) {
     .place__image {
 	width: 440px;
     height: 440px;
     }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
     .place__image {
 	width: 340px;
     height: 340px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
     .place__image {
 	width: 100%;
+    height: 320px;
     margin-top: 32px;
     margin-bottom: 32px;
     object-fit: cover;
