--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -11,14 +11,15 @@
    align-self: end;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
     .place__title {
+    width: 340px;
     font-size: 42px;
     line-height: 46px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
     .place__title {
     font-size: 32px;
     line-height: 35px;
