--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -20,17 +20,17 @@
 	margin-bottom: 0;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1024px) {
     .place {
 	display: grid;
 	grid-auto-flow: column;
 	grid-template-columns: 440px auto;
-    grid-template-rows: auto 440px;
+    grid-template-rows: auto auto;
     column-gap: 32px;
     }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
     .place {
 	grid-template-columns: 340px auto;
     grid-template-rows: auto auto;
@@ -39,7 +39,7 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
     .place {
 	grid-template-columns: 1fr;;
     grid-template-rows: repeat(4, auto);
