--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,23 +1,30 @@
 .places {
-	margin: 92px 148px 0 148px;
-}
-
-@media screen and (max-width: 1280px) {
-    .places {
-	margin: 92px 48px 0 48px;
-    }
+    max-width: 984px;
+	margin: 92px auto 0 auto;
+    padding-left: 48px;
+    padding-right: 48px;
 }
 
 @media screen and (max-width: 1024px) {
     .places {
-	margin: 88px 24px 0 24px;
+	padding-left: 48px;
+    padding-right: 48px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .places {
+        margin-top: 88px;
+        margin-bottom: 24px;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .places {
     margin-top: 0;
-	margin-left: 0;
-	margin-right: 0;
+	padding-left: 0;
+    padding-right: 0;
     }
 }
