--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -4,17 +4,17 @@
     font-size: 18px;
     line-height: 22px;
     color: #FFFFFF;
-    width: 360px;
+    max-width: 360px;
     margin: 0 auto;
     text-align: center;
-    top: 32px;
+    padding-top: 32px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 640px) {
     .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
-    width: 288px;
-    top: 16px;
+    max-width: 272px;
+    padding-top: 16px;
     }
 }
