--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -4,15 +4,15 @@
     font-size: 72px;
     line-height: 76px;
     color: #FFFFFF;
-    width: 560px;
+    max-width: 560px;
     margin: 0 auto;
     text-align: center;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 640px) {
     .cover__title {
     font-size: 32px;
     line-height: 35px;
-    width: 288px;
+    max-width: 254px;
     }
 }
