--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,12 +1,11 @@
 .header__lang-link {
-	position: relative;
 	font-size: 24px;
 	line-height: 28px;
-	margin-top: 18px;
-	margin-bottom: 6px;
+	text-decoration: none;
+	color: #FFFFFF;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 640px) {
     .header__lang-link {
 	font-size: 18px;
 	line-height: 24px;
