--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,5 +1,6 @@
 @import url(./__list/intro__list.css);
 @import url(./__list-text/intro__list-text.css);
+@import url(./__list-text/_weight/intro__list-text_weight_bold.css);
 @import url(./__text/intro__text.css);
 @import url(./__title/intro__title.css);
 
@@ -24,7 +25,7 @@
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 640px) {
     .intro {
 	margin-left: 16px;
 	margin-right: 16px;
