--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,7 +5,7 @@
     line-height: 36px;
     color: #FFFFFF;
     margin: 32px auto 64px auto;
-    width: 640px;
+    max-width: 640px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -16,15 +16,15 @@
 
 @media screen and (max-width: 728px) {
     .lead__subtitle {
-    width: 580px;
+    max-width: 580px;
+    font-size: 16px;
+    line-height: 20px;
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 640px) {
     .lead__subtitle {
-    font-size: 16px;
-    line-height: 20px;
-    width: 288px;
+    max-width: 288px;
     margin-top: 16px;
     margin-bottom: 40px;
     }
