--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,13 +5,13 @@
     line-height: 100px;
     color: #FFFFFF;
     margin: 0 auto;
-    width: 720px;
+    max-width: 720px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 728px) {
     .lead__title {
     font-size: 40px;
     line-height: 44px;
-    width: 288px;
+    max-width: 288px;
     }
 }
