--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -26,11 +26,16 @@
     }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 640px) {
     .photo-grid {
-	grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(12, 1fr);
     grid-gap: 12px;
     margin: 64px 16px 64px 16px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .photo-grid {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(12, 1fr);
     }
 }
