--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,29 +1,19 @@
 .places {
     max-width: 984px;
-	margin: 92px auto 0 auto;
+	margin: 0 auto;
     padding-left: 48px;
     padding-right: 48px;
 }
 
-@media screen and (max-width: 1024px) {
-    .places {
-	padding-left: 48px;
-    padding-right: 48px;
-    }
-}
-
 @media screen and (max-width: 768px) {
     .places {
-        margin-top: 88px;
-        margin-bottom: 24px;
-        padding-left: 24px;
-        padding-right: 24px;
+    padding-left: 24px;
+    padding-right: 24px;
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 640px) {
     .places {
-    margin-top: 0;
 	padding-left: 0;
     padding-right: 0;
     }
