--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -22,7 +22,7 @@
 @media screen and (max-width: 640px) {
     .place__image {
 	width: 100%;
-    height: 320px;
+    height: auto;
     margin-top: 32px;
     margin-bottom: 32px;
     object-fit: cover;
